Bug 13305 - vfs_fileid: Fix the 32-bit build
Summary: vfs_fileid: Fix the 32-bit build
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: VFS Modules (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal (vote)
Target Milestone: 4.8
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-02-27 09:42 UTC by Ralph Böhme
Modified: 2018-02-28 12:05 UTC (History)
1 user (show)

See Also:


Attachments
Patch for 4.8 cherry-picked from master (1.07 KB, patch)
2018-02-27 09:43 UTC, Ralph Böhme
metze: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralph Böhme 2018-02-27 09:42:23 UTC
It would be good to backport c6999a248ad78f75cbfcc0f461298021b20905b4 to 4.8.
Comment 1 Ralph Böhme 2018-02-27 09:43:14 UTC
Created attachment 13984 [details]
Patch for 4.8 cherry-picked from master
Comment 2 Stefan Metzmacher 2018-02-27 15:16:10 UTC
Pushed to autobuild-v4-8-test.
Comment 3 Karolin Seeger 2018-02-28 12:05:14 UTC
Pushed to v4-8-test.
Closing out bug report.

Thanks!