vfs_fileid: Fix the 32-bit build

Bug: https://bugzilla.samba.org/show_bug.cgi?id=13305

Signed-off-by: Volker Lendecke <vl@samba.org>
Reviewed-by: Jeremy Allison <jra@samba.org>
(cherry picked from commit c6999a248ad78f75cbfcc0f461298021b20905b4)